--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -3,9 +3,9 @@
 
   background: var(--white);
   border-radius: 5px;
-  box-shadow: 0 0 650px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
 
-  padding: 2rem 0;
+  padding: 2rem;
 
   display: flex;
   flex-direction: column;
